Added mocha reporting

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "@cypress/grep": "^4.1.0",
-    "cypress": "^13.13.0"
+    "cypress": "^13.13.0",
+    "cypress-mochawesome-reporter": "^3.8.2"
   },
   "scripts": {
     "cypress:open": "cypress open"
