--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "@cypress/grep": "^4.1.0",
-    "cypress": "^13.13.0"
+    "allure-commandline": "^2.30.0",
+    "cypress": "^13.13.0",
+    "mocha-allure-reporter": "^1.4.0"
   },
   "scripts": {
     "cypress:open": "cypress open"
